--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
 .App {
   text-align: center;
+  background-color: rgba(223, 147, 7, 0.299);
+  height: 90vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+Button{
+  height: 50px;
+  width: 100px;
+  margin-top: 20px;
+  font-size: 17px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  color: #ffffff;  
+  background-color: rgb(7, 103, 176);       
+  margin: 5px 5px;    
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+Button:hover{
+ color: rgb(0, 0, 0);
+ background-color: rgb(4, 139, 40);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+img{
+  width: 250px;
+  margin-top: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (max-width: 600px) {
+    img{
+      width: 200px;
+      margin-top: 10px;
+    
   }
 }
